--- a/sesion_01/index.html
+++ b/sesion_01/index.html
@@ -11,6 +11,7 @@
     <img SRC="images/Playa.gif" alt = "Costa verde en gif" >
     <hr />
     <h2><strong>Galeria de imagenes</strong></h2>
+    <!--Aqui pondre todas mis playas favoritas de Lima-->
     <h3><em>1.-Playa Agua Dulce</em></h3>
     <img src="images/PlayaAguaDulce.bmp" alt="Playa Agua Dulce en formato BMP">
     <p>
@@ -58,5 +59,17 @@
         de Lima. Su mar es tranquilo y su entorno está rodeado de viviendas de lujo, 
         lo que la convierte en un destino preferido por quienes buscan comodidad y privacidad.
     </P>
+
+    <a href="bienvenidos.html">
+        Ir a bienvenidos
+    </a>
+    <br>
+    <a href="https://www.google.com/" target="_blank">
+        Google
+    </a>
+    <br>
+    <a href="https://www.instagram.com/" target="_blank" > 
+        <img src="images/ig_logo.png" alt="Logo Ig">
+    </a>
 </body>
 </html>
