aprendiendo bordes, fuente

--- a/sesion_02/equipos-peruanos.html
+++ b/sesion_02/equipos-peruanos.html
@@ -57,7 +57,7 @@
         conocida por su fervor y amor incondicional al equipo.
     </P>
     <h2 class="subtitulo-7">7. Cienciano</h2>
-    <P>El único equipo peruano en haber logrado títulos internacionales. Cienciano, de Cusco,
+    <P class="bordes_distinto">El único equipo peruano en haber logrado títulos internacionales. Cienciano, de Cusco,
         sorprendió al mundo al ganar la Copa Sudamericana en 2003 y
         la Recopa Sudamericana en 2004, marcando un hito en la historia del fútbol peruano.</P>
 </body>
