Aprendiendo mas de local storage

--- a/sesion_04/importacion_de_productos.html
+++ b/sesion_04/importacion_de_productos.html
@@ -46,6 +46,16 @@
 
     </form>
 
+    <hr>
+
+    <di id="message">
+        Ruc desde el storage:
+    </di>
+
+    <div id="MensajesDiv">
+
+    </div>
+
     <script src="content/views/importacion_de_productos.js"></script>
 </body>
 </html>
